examples/test/testpolicy5184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5184
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key5: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value17
          key5: value39
          key44: value26
      podSelector:
        matchLabels:
          key16: value19
          key41: value21
          key33: value5
